# mojang2tiny

./: .gitignore  Cargo.toml
src/: intermediary.rs  jvmsig.rs  main.rs  mapping_output.rs  mojangmap.rs
