[package]
name = "mojang2tiny"
version = "0.1.0"
authors = ["therealfarfetchd <git@therealfarfetchd.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.1"
clap = "2.33.0"

[profile.release]
lto = true
